--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body {
 
 .digiBox {
   /* width: 50%; */
-  height: 200px;
+  min-height: 200px;
   background-color: rgba(255, 255, 255, 0.5);
   border: 10px solid rgb(50, 170, 226);
   border-style: double;
