--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,18 @@ body {
   z-index: -100;
 }
 
+button {
+  border: 1px solid rgb(255, 255, 255);
+  color: white;
+  background-color: rgb(44, 41, 56);
+  border-radius: 4px;
+  height: 38px;
+  text-align: center;
+  font-size: large;
+  padding: 0px 10px;
+  white-space: nowrap;
+}
+
 .pixelGrid {
   height: 100vh;
   width: 100vw;
@@ -31,6 +43,12 @@ body {
 .piece {
   /* height: 10vh; */
   width: 15vw
+}
+
+.aligned {
+  text-align: center;
+  align-items: center;
+  padding: 0;
 }
 
 .white {
@@ -90,4 +108,414 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(150px, 250px));
   gap: 10px;
   grid-auto-flow: dense;
+}
+
+.error {
+  color: red;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  padding: 0;
+  text-align: center;
+}
+
+/* NavBar CSS */
+
+.topbar{
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9900;
+}
+
+.navbar {
+  top: 0;
+  height: 64px;
+  width: 100vw;
+  background-color: rgb(44, 41, 56);
+  border-bottom: 1px white solid;
+}
+
+.nav-main {
+  height: 66px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-menu {
+  display: block;
+  padding: 0;
+  margin: auto;
+  position: absolute;
+}
+
+.nav-item {
+  font-size: 20px;
+  font-weight: 400;
+  padding: auto;
+  float: none;
+  overflow: hidden;
+  background-color: rgb(44, 41, 56);
+  width: 100vw;
+  outline: .5px solid white;
+}
+
+.nav-item2 {
+  display: flex;
+}
+
+.navbar-menu-item {
+  margin: 20px;
+  padding: 0;
+  font-weight: 400;
+  font-size: 1.25rem;
+  color: white;
+}
+
+.nav-dropdown-content {
+  background-color: rgba(80, 74, 102, 0.623);
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  top: auto;
+}
+
+.dropdown-select {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  height: 50px;
+  transition: all 1s;
+}
+
+.dropdown-select:hover {
+  background-color: rgba(255, 0, 0, 0);
+  transition: all 1s;
+}
+
+.nav-dropdown-item {
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: none;
+  color: white;
+  display: block;
+  margin: 0 10px 0 10px;
+  margin-left: 20px;
+  transition: all .5s;
+}
+
+.nav-dropdown-item:hover {
+  margin-left: 35px;
+  transition: all .5s;
+}
+
+.navbar-select {
+  height: 62px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  transition: all 1s;
+  justify-content: left;
+}
+
+.navbar-select:hover {
+  background-color: rgb(123, 114, 158);
+}
+
+.navbar-select2 {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(123, 114, 158);
+  width: 50vw;
+  outline: 1px solid white;
+  transition: all 1s;
+}
+
+.navbar-select2:hover {
+  background-color: rgb(97, 28, 161);
+  transition: all 1s;
+}
+
+.threebars {
+  height: 40px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.none {
+  display: none;
+}
+
+.maximize {
+  top: 66px;
+  max-height: 1333px;
+  max-width: 1333px;
+  opacity: 1;
+  transition: all .5s;
+}
+
+.minimize {
+  top: 66px;
+  max-height: 0;
+  max-width: 0;
+  opacity: 0;
+  transition: all .5s;
+}
+
+.navbar-brand2 {
+  font-size: 23px;
+  font-weight: 600;
+  /* margin: 0 10px; */
+  margin: 0 0 0 10px;
+  padding: 0 20px 0 10px;
+  text-decoration: none;
+  color: white;
+  transition: all 0.5s;
+}
+
+.navbar-brand2:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.navbar-selected {
+  height: 62px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: rgb(123, 114, 158);
+  }
+  50% {
+    background-color: rgb(44, 41, 56);
+  }
+  100% {
+    background-color: rgb(123, 114, 158)
+  }
+}
+
+/* end navbar css */
+
+/* medium login modal css */
+.medium-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(33, 24, 54, 0.9);
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 80%;
+  z-index: 1000;
+}
+
+.login {
+  width: 100%;
+  margin: 20px;
+}
+
+.login-input {
+  width: 60vw;
+  height: 37px;
+  margin: 5px 5px 0px 5px;
+}
+
+.blackSpace {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.507);
+  width: 100vw;
+  height: 100vh;
+  z-index: 899;
+}
+
+.pass-eye {
+  margin: 2px 4px -8px 5px;
+  width: 25px;
+  height: 27px;
+  z-index: 0;
+}
+
+.front-button {
+  border-radius: 5px 0 0 5px;
+}
+
+.middle-button {
+  border-radius: 0;
+}
+
+.end-button {
+  border-radius: 0 5px 5px 0;
+}
+
+.login-label{
+  text-align: left;
+  font-size: 1.25rem;
+  margin: 15px 5px 0px 5px;
+  color: white;
+}
+
+.login-label-center{
+  text-align: center;
+  margin: 15px 5px 0px 5px;
+  color: white;
+  font-size: xx-large
+}
+
+.login-label-center2{
+  text-align: center;
+  margin: 15px 5px 0px 5px;
+  color: white;
+}
+
+.google-button {
+  width: 100%;
+  margin-top: 20px;
+}
+/* end medium login modal css */
+
+@media screen and (min-width: 1330px) {
+  /* navbar css */
+
+  .navbar-brand {
+    font-size: 23px;
+    font-weight: 500;
+  }
+
+  .nav-item {
+    font-size: 20px;
+    font-weight: 400;
+    width: auto;
+    padding: auto;
+    float: left;
+    overflow: hidden;
+    outline: none;
+  }
+
+  .nav-dropdown-item {
+    font-size: 20px;
+    font-weight: 400;
+    text-decoration: none;
+    color: white;
+    display: block;
+    margin: 0 10px 0 10px;
+  }
+
+  .nav-dropdown-item:hover {
+    text-decoration: none;
+    margin-left: 10px;
+    color: white;
+  }
+
+  .media-none {
+    display: none;
+  }
+
+  .media-flex {
+    display: flex;
+  }
+
+  .media-block {
+    display: block;
+  }
+
+  .nav-main {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .nav-button100 {
+    margin: 0;
+    padding: 0;
+  }
+
+  .animate {
+    opacity: 1;
+    max-height: 1000px;
+    transition: opacity 0.5s, max-height 0.5s;
+  }
+
+  .animate2 {
+    opacity: 1;
+    max-height: 1000px;
+    transition: opacity 0.5s, max-height 0.5s;
+  }
+
+  .wide90p {
+    width: 90%;
+  }
+
+  .media-navbar-menu {
+    display:flex;
+    margin: 0;
+    padding: 0 0 0 10px;
+  }
+
+  .media-navbar-menu-item {
+    margin: auto;
+    padding: 0 10px 0 10px;
+    font-weight: 400;
+    color: white;
+    animation: none;
+  }
+
+  .nav-dropdown-content {
+    background-color: rgb(80, 74, 102);
+    position: absolute;
+    min-width: 160px;
+    width: auto;
+    z-index: 9999;
+    top: 66px;
+  }
+
+  .media-navbar-select {
+    height: 62px;
+    width: auto;
+    display: flex;
+    align-items: center;
+    transition: all 1s;
+  }
+
+  .dropdown-select {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    text-decoration: none;
+    transition: all 1s;
+  }
+
+  .dropdown-select:hover {
+    background-color: rgb(180, 166, 233);
+    transition: all 1s;
+  }
+
+  .accountbuttons {
+    display: flex;
+    margin-right: 10px;
+  }
+
+  .navbar-brand2 {
+    width: 350px;
+    display: flex;
+    justify-content: center;
+    white-space: nowrap;
+    padding: 0 20px 0 20px;
+  }
+  /* navbar css end */
+
+  /* medium login modal css */
+  .login-input {
+    width: 370px;
+    height: 37px;
+    margin: 5px 5px 0px 5px;
+  }
 }
