--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%; /* Set body height to 100% of viewport height */
   width: 100%;
   background-image: url("../public/hexgrid3.png");
-  background-size: cover; /* Ensure the background image covers the entire body */
+  background-size: 100%; /* Ensure the background image covers the entire body */
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
   background-attachment: fixed;
-  overflow-x: hidden; /* Hide horizontal overflow to prevent horizontal scrollbar */
-  position: absolute;
+  /* overflow-x: hidden; */
   z-index: -100;
 }
 
