--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   height: 100%; /* Set body height to 100% of viewport height */
   width: 100%;
   background-image: url("../public/hexgrid3.png");
-  background-size: 100%; /* Ensure the background image covers the entire body */
+  background-size: cover; /* Ensure the background image covers the entire body */
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
