--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,10 @@ button {
   white-space: nowrap;
 }
 
+:root {
+  --window-width80: calc(100vw - 80px);
+}
+
 .cyberspace {
   margin: 0 30px 0 30px;
 }
@@ -65,6 +69,14 @@ button {
 .digiBox {
   /* width: 50%; */
   min-height: 200px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 10px solid rgb(50, 170, 226);
+  border-style: double;
+}
+
+.digiBox2 {
+  width: var(--window-width80);
+  min-height: 300px;
   background-color: rgba(255, 255, 255, 0.5);
   border: 10px solid rgb(50, 170, 226);
   border-style: double;
@@ -156,6 +168,16 @@ button {
 
 .margin-bottom-20p {
   margin-bottom: 20px;
+}
+
+.horizontalScrollable {
+  display: flex;
+  justify-content: center;
+  overflow-x: scroll;
+}
+
+.xx-large-button {
+  width: 100%;
 }
 
 /* NavBar CSS */
