--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ button {
   /* width: 50%; */
   min-height: 200px;
   background-color: rgba(255, 255, 255, 0.5);
-  border: 10px solid rgb(50, 170, 226);
+  border: 15px solid rgb(50, 170, 226);
   border-style: double;
 }
 
@@ -99,7 +99,7 @@ button {
   /* width: var(--window-width80); */
   min-height: 400px;
   background-color: rgba(255, 255, 255, 0.5);
-  border: 10px solid rgb(50, 170, 226);
+  border: 15px solid rgb(56, 170, 226);
   border-style: double;
 }
 
@@ -242,6 +242,10 @@ button {
   outline: 2px white solid;
 }
 
+.selected {
+  background-color: rgba(255, 115, 0, 0.5);
+}
+
 /* Hide the scrollbar */
 .verticalScrollable::-webkit-scrollbar {
   width: 0; /* Set the width of the scrollbar to 0 */
@@ -255,6 +259,24 @@ button {
 .xx-large-button {
   width: 100%;
 }
+
+/* Back to top css */
+
+.back-to-top {
+	height: 65px;
+	position: fixed;
+	right: 2rem;
+	bottom: 2rem;
+	cursor: pointer;
+	opacity: 100%;
+	transition: opacity 0.5s;
+}
+
+.hidden {
+  opacity: 0%;
+}
+
+/* End back to top css */
 
 /* NavBar CSS */
 
